fix(frontend/v2): :lipstick: Remove width of Footer (caused vertical scrollbar)

--- a/apps/frontend/src/styles/components/v2/Footer.module.css
+++ b/apps/frontend/src/styles/components/v2/Footer.module.css
@@ -1,7 +1,5 @@
 .root {
 	border-top: 1px solid light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-5));
-
-	width: 100vw;
 }
 
 .container {
